force-app/main/default/objects/SSP_Notifications__c/SSP_Notifications__c.object-meta.xml
<CustomObject>
    <description>Object to store system notifications, To Dos, Notices/Messages, Announcements</description>
    <label>SSP Notifications</label>
    <nameField>
        
        <displayFormat>Msg-{0000000000}</displayFormat>
        
        <label>SSP_Notifications Name</label>
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>SSP Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>