force-app/main/default/objects/SSP_Notifications__c/fields/AgencyEmployeeId__c.field-meta.xml
<CustomField>
    <fullName>AgencyEmployeeId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency Employee Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>