force-app/main/default/objects/SSP_Notifications__c/fields/AgencyId__c.field-meta.xml
<CustomField>
    <fullName>AgencyId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>