force-app/main/default/objects/SSP_Notifications__c/fields/Benefind_Id__c.field-meta.xml
<CustomField>
    <fullName>Benefind_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Benefind Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>