force-app/main/default/objects/SSP_Notifications__c/fields/dmsDocumentId__c.field-meta.xml
<CustomField>
    <fullName>dmsDocumentId__c</fullName>
    <description>DMS id for the document to be downloaded</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>DMS id for the document to be downloaded</inlineHelpText>
    <label>DmsDocumentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>