force-app/main/default/objects/SSP_Notifications__c/fields/dueDate__c.field-meta.xml
<CustomField>
    <fullName>dueDate__c</fullName>
    <description>due date to be considered for archiving this notification.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>due date to be considered for archiving this notification.</inlineHelpText>
    <label>DueDate</label>
    <type>DateTime</type>
</CustomField>