force-app/main/default/objects/SSP_Notifications__c/fields/Linked_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Linked_Record_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Linked Record Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>