force-app/main/default/objects/SSP_Notifications__c/fields/MessageCreateDate__c.field-meta.xml
<CustomField>
    <fullName>MessageCreateDate__c</fullName>
    <description>created date for this notice</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>created date for this notice</inlineHelpText>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>