force-app/main/default/objects/SSP_Notifications__c/fields/messageSubjectES__c.field-meta.xml
<CustomField>
    <fullName>messageSubjectES__c</fullName>
    <description>title to show for each notice on UI</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>title to show for each notice on UI</inlineHelpText>
    <label>MessageSubjectES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>