force-app/main/default/objects/SSP_Notifications__c/fields/Notification_Body__c.field-meta.xml
<CustomField>
    <fullName>Notification_Body__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notification Body</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>