force-app/main/default/objects/SSP_Notifications__c/fields/Notification_Body_Es__c.field-meta.xml
<CustomField>
    <fullName>Notification_Body_Es__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notification Body Es</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>