force-app/main/default/objects/SSP_Notifications__c/fields/notificationCode__c.field-meta.xml
<CustomField>
    <fullName>notificationCode__c</fullName>
    <description>unique id for each notification. Ex. NOT-001. If it’s a reminder then RNOT-001. For a reminder separate notification will be sent.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>unique id for each notification. Ex. NOT-001. If it’s a reminder then RNOT-001. For a reminder separate notification will be sent.</inlineHelpText>
    <label>NotificationCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>