force-app/main/default/objects/SSP_Notifications__c/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <label>Program Code</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>BenefitPrograms</valueSetName>
        
        </valueSet>
</CustomField>