force-app/main/default/objects/SSP_Notifications__c/fields/recipientId__c.field-meta.xml
<CustomField>
    <fullName>recipientId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RecipientId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>