force-app/main/default/objects/SSP_Notifications__c/fields/recipientType__c.field-meta.xml
<CustomField>
    <fullName>recipientType__c</fullName>
    <description>user to which notice is generated. Audience of this notice.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>user to which notice is generated. Audience of this notice.</inlineHelpText>
    <label>RecipientType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>