force-app/main/default/objects/SSP_Notifications__c/fields/Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reminder Date</label>
    <type>Date</type>
</CustomField>