force-app/main/default/objects/SSP_Notifications__c/fields/RequestAccessPermission__c.field-meta.xml
<CustomField>
    <fullName>RequestAccessPermission__c</fullName>
    <description>This field is use to store the Request Access Permission</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Access Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>