force-app/main/default/objects/SSP_Notifications__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Active</fullName>
                
                
                    <label>Active</label>
                
                </value>
            
                <value>
                
                    <fullName>Expired</fullName>
                
                
                    <label>Expired</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>