force-app/main/default/objects/SSP_Notifications__c/recordTypes/SSP_Announcement.recordType-meta.xml
<RecordType>
    <fullName>SSP_Announcement</fullName>
    <active>true</active>
    <label>SSP Announcement</label>
</RecordType>