force-app/main/default/objects/SSP_Notifications__c/recordTypes/System_Notification.recordType-meta.xml
<RecordType>
    <fullName>System_Notification</fullName>
    <active>true</active>
    <label>System Notification</label>
</RecordType>