force-app/main/default/objects/SSP_Notifications__c/recordTypes/To_Do.recordType-meta.xml
<RecordType>
    <fullName>To_Do</fullName>
    <active>true</active>
    <label>To Do</label>
</RecordType>